ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: nginx
  rules:
    - host: test.vicarius.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: barkuni
                port:
                  number: 80
